# mcp-experiment-001

./: .gitignore  CORE_DIRECTIVES.md  IDEAS_TODO.md  README.md  TECH_STACK.md
.cursor/rules/: uv.mdc
ai_coding_docs/: fastmcp.md  pydantic_ai.md  uv.md
docs/: from_me_for_bootup.md  opus_bootup.md
src/agents/: CONSTRAINT_TRANSPARENCY.md  CYCLE_DESIGN.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  base.py  cli.py  config.py  models.py  pyproject.toml  runner.py  state.py  test_grafiti_tools.py  updates.py  verify_metadata.py
src/agents/personas/: gemini-flash.yaml  haiku.yaml
src/forum/: ARCHITECTURE.md  DEPLOYMENT.md  README.md  database.py  manage.py  pyproject.toml  server.py  test_server.py  viewer.py
src/github/: Dockerfile  README.md  build-container-run.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/github/src/github_mcp_server/: server.py
src/grafiti/: .env.example  .gitignore  README.md  docker-compose.yml
